<resources>
    <string name="app_name">TAJERTAWSEEL</string>


    <string name="drawer_option1">طلبات العملاء</string>
    <string name="drawer_option2">مجموعات التوصيل</string>
    <string name="drawer_option3">تاريخ التوصيلات</string>
    <string name="drawer_option4">المندوبﻴﻦ المفضلﻴﻦ</string>
    <string name="drawer_opton5">كيف تستخدم التطبيق</string>
    <string name="drawer_option6">من نحن</string>
    <string name="drawer_option7">عندك ملاحظة؟</string>


    <string name="post_your_request">أضف طلب</string>
    <string name="number_of_requests">عدد الطلبات:</string>

    <string name="start_delivery">ابدأ التوصيل</string>
    <string name="products">منتجات</string>
    <string name="more">أكﺜﺮ</string>
    <string name="number_of_groups">عدد المجموعات:</string>

    <string name="add_demand_for_basket">اضف الطلب للسلة</string>


    <string name="pick_set">اختيار مجموعة</string>
    <string name="agents">عملاء</string>
    
    
    <string name="group_success">تم اضافة الطلب
للمجموعة بنجاح</string>
    <string name="dilevery_begin">بدأ التوصيل حالاً</string>

    <string name="pose">لاحقا</string>


    <string name="pricing_scale">نطاق التسعﻴﺮ</string>
    <string name="payment_when_recieving">الدفع عند الاستلام</string>
    <string name="payment_method">طريقة الدفع</string>
    <string name="ryal_20">قيب ( 20 ريال)ا</string>
    <string name="total_price_products">السعر الاجﻤﺎلي للمنتجات</string>
    <string name="total_request_price">السعر الإجﻤﺎلي للطلب</string>
    <string name="delivery_Price">سعر التوصيل</string>


    <string name="productItemString">سماعة سوني SDK قوة 4000 واط 3100</string>
    <string name="productItemString2">صوت عالي الجودة صناعة المانية</string>

    <string name="less">أقل</string>


    <string name="post_data_from_lab">أضف البيانات من تاجرلاب</string>
    <string name="add_new_order">إضافة طلب جديد</string>

    <string name="customer_details">بيانات العميل</string>
    <string name="customer_name">اسم العميل</string>
    <string name="customer_phone">رقم الهاتف</string>
    <string name="email">البريد الإلكتروﻧﻲ</string>


    <string name="add_whatsapp">إضف من الوتساب</string>
    <string name="location_on_the_map">الموقع على الخريطة</string>
    <string name="title_activity_maps">Map</string>


    <string name="post_your_new_product">أضف منتج جديد</string>
    <string name="products_to_connect">منتجات للتوصيل</string>
    <string name ="wire_transfer">تحويل بنﻜﻲ</string>
    <string name = "payment_on_delivery">دفع عند الاستلام</string>
    <string name="total_price_summary">اجﻤﺎلي ملخص الاسعار</string>


    <string name="cancellation">إلغاء</string>
    <string name="connt">متابعة</string>
    <string name="protection">حفظ</string>


    <string name="add_product_demand">إضافة منتج للطلب</string>
    <string name="product_price">سعر المنتج</string>
    <string name="product_image">صورة المنتج</string>



    <string name="post_group">أضف مجموعة</string>
    <string name="group_name">اسم المجموعة</string>
    <string name="create_new_group">إنشاء مجموعة جديدة</string>
    <string name="delivery_start">بدء التوصيل</string>
    <string name="add">إضافة</string>



    <string name="ryal30">متوسط ( 30 ريال)ا</string>
    <string name="ryal40">بعيد ( 40 ريال)ا</string>
    <string name="ryal50">بعيد جدًا ( 50 ريال)ا</string>


    <string-array name="ryal_array">

        <item>قريب ( 20 ريال)</item>
        <item>متوسط ( 30 ريال)ا</item>
        <item>بعيد ( 40 ريال)ا</item>
        <item>بعيد جدًا ( 50 ريال)ا</item>
    </string-array>

<string name="accept">قبول</string>
    <string name="waiting_for_acceptance">انتظار قبول مندوب rep</string>
    <string name="cancelling_order">إلغاء الطلب</string>
    <string name="title_activity_sample">sample</string>



    <string name="delegates_available">المندوبﻴﻦ المتاحﻴﻦ:</string>
    <string name = "number_of_votes">عدد التقييﻤﺎت</string>

    <string name = "name">الاسم</string>
    <string name="the_car">السيارة</string>
    <string name="model">موديل</string>
    <string name = "motherBoard">اللوحة</string>
    <string name="alTwsil">للتواصل</string>

    <string name="more2">المزيد</string>

    <string name="choose_deligate">اختيار المندوب</string>
    <string name = "distance_and_time">المسافة و الوقت</string>
    <string name="back_to_choose_delegates">الرجوع لاختيار مندوب</string>
    <string name="New">جديد</string>
    <string name="new_application">طلب جديد</string>
    <string name="new_group">مجموعة جديدة</string>
    <string name="begin_to_deliver">البدء في توصيل</string>



    <string name="application_jammah">الطلبات المجمة</string>
    <string name="applications">طلبات</string>
    <string name="march">مارس</string>
    <string name="khalid_ahmed_al">Khalid Ahmed Al...</string>
    <string name="number_delegates_question">عدد المندوبين المفضلين</string>
    <string name="coupling">توصيلات</string>
    <string name="representative_data">بيانات المندوب</string>
    <string name="contact_number">رقم التواصل</string>
    <string name="last_connection_was_on">آخر توصيلة كانت بتاريخ</string>

    <string name="connecting_profile_delegates">بروفايل مندوب توصيل</string>
    <string name="the_map">الخريطة</string>
    <string name="dilevered_now">يتم توصيلها الآن</string>
    <string name="request_dresses_for_girls">سلة طلبات الفساتين للبنات والاطفال</string>
    <string name="number_of_clients">عدد العملاء</string>
    <string name="no_delivery">رقم طلب التوصيل</string>
    <string name="recieved_delegate">استلمها المندوب</string>
    <string name="report_this_delegate">التبليغ عن هذا المندوب !</string>
    <string name="financial_history">التاريخ المالي</string>
    <string name="price_of_the_delivery">سعر التوصيل الكلي</string>
    <string name="price_of_total_application">سعر الطلبات الكلي</string>
    <string name="delivered">تم التوصيل</string>
    <string name="date_of_dilevery_of_application">تاريخ تسليم الطلبات للمندوب</string>
    <string name="dilevery_price">سعر التوصيل:</string>
    <string name="asking_price">سعر الطلب:</string>
    <string name="advertisement_merchant">رصيدي أنا التاجر</string>
    <string name="balance_delegate">رصيد المندوب:</string>
    <string name="balance_dealer_connected">رصيد تاجر توصيل</string>
    <string name="financial_history_of_Request">التاريخ المالي للطلب</string>
    <string name="available">متاح</string>
    <string name="confirm_status_busy">هل أنت متأكد من تغيير حالتك إلى مشغول؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="trader_favourite">التجّار المفضلﻴﻦ</string>
    <string name="pending">Pending</string>
    <string name="on_the_way">في الانتظار</string>
    <string name="dealer_profile">بروفايل تاجر</string>




    <!--sample strings-->


    <string name="sub_title_rating_screen">عدد التجّار المفضلين:</string>
    <string name="tawseelat">توصيلات</string>
    <string name="byaanat">بيانات المندوب</string>
    <string name="ismm">الاسم</string>
    <string name="desription_heading">عن التاجر</string>
    <string name="dummy_description">المطعم تاجر حر أعمل في المطعم تاجر حر أعمل في المطعم تاجر حر أعمل
في المطعم تاجر حر أعمل في المطعم تاجر حر أعمل في المطعم تاجر حر
أعمل في المطعم تاجر حر أعمل في المطعم تاجر حر</string>

    <string name="raqm">رقم التواصل</string>
    <string name="person_ratings">عدد التقييﻤﺎت</string>
    <string name="bruall_dilevery">بروافيل طلب التوصيل</string>
<string name="enterconfirmationcode">إدخال كود تسليم الطلب</string>
    <string name="thisisfromcustomer">حصل على كود تسليم الطلب من العميل
لإقفال الطلب</string>
    <string name="entercode">أدخل الكود</string>
    <string name="entercodehere">ادخل الرمز</string>
    <string name="btncancel">إلغاء</string>
    <string name="okay">إدخال</string>
    <string name="delivered2">تم توصيل الطلب</string>
    <string name="tryagain">أعد التحقق</string>
    <string name="check">تحقق</string>
    <string name="correct">تم التحقق</string>
    <string name="addgrouptajerlap">انشاء سلة توصيل - تاجر لاب</string>
    <string name="tajerlapdesc">سيتم بعد اختيار هذا الخيار انشاء سلة توصيل
جديدة خاصة بطلبات موقع - تاجرلاب</string>
    <string name="addgrouptajertawseel">انشاء سلة توصيل - فوري
</string>
    <string name="tajertawseeldesc">سيتم بعد اختيار هذا الخيار انشاء سلة توصيل
        جديدة خاصة بالطلبات الفورية</string>
    <string name="next">متابعة
</string>
    <string name="tajerlapgroup">سلال طلبات تاجر لاب</string>
    <string name="tajertawseelgroup">سلال الطلبات اليدوية</string>
</resources>
