<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingTop="20dp"
    android:paddingBottom="10dp">



    <tawseel.com.tajertawseel.CustomBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="right"
        android:minWidth="280dp"
        android:paddingRight="15dp"
        android:id="@+id/BtnNewOrder"
        android:gravity="center"
        android:text="@string/confirm_status_busy"
        android:textColor="@color/mainColor"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_marginRight="10dp"



        />









    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right"

        >






        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"

            android:layout_marginLeft="25dp"
            android:minWidth="280dp"
            android:id="@+id/Online"
            android:gravity="center"
            android:background="@drawable/green_rectangle"

            android:text="@string/yes"
            android:textColor="@color/green"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_marginRight="25dp"



            />




        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="right"
            android:minWidth="280dp"
            android:id="@+id/Offline"
          android:layout_marginLeft="25dp"
            android:gravity="center"
            android:background="@drawable/red_rectangle"

            android:text="@string/no"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_marginRight="25dp"



            />







    </LinearLayout>





</LinearLayout>