<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">



    <tawseel.com.tajertawseel.CustomBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="right"
        android:minWidth="280dp"
        android:paddingRight="15dp"
        android:id="@+id/option1"
        android:gravity="center_vertical"


        android:text="@string/new_application"
        android:textColor="@color/mainColor"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_marginRight="10dp"



        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccc"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right"
        >






        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="right"
            android:paddingRight="15dp"
            android:minWidth="280dp"
            android:id="@+id/option2"
            android:gravity="center_vertical"


            android:text="@string/new_group"
            android:textColor="@color/mainColor"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_marginRight="10dp"



            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccc"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />



        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="right"
            android:minWidth="280dp"
            android:id="@+id/option3"
            android:paddingRight="15dp"
            android:gravity="center_vertical"


            android:text="@string/begin_to_deliver"
            android:textColor="@color/mainColor"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_marginRight="10dp"



            />







    </LinearLayout>





</LinearLayout>