<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp">
    
    <ListView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/product_list"
        android:focusable="true"
        android:divider="@android:color/transparent"></ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="right|center_vertical"
        android:background="@drawable/grey_rectangle"
        android:id="@+id/popup_view"
        android:descendantFocusability="blocksDescendants"
        >


        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:text="@string/ryal_20"
            android:layout_marginRight="10dp"

            />



        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/solid_green_circle"
            android:layout_marginRight="10dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#cccc"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/pricing_scale"
            android:layout_marginRight="10dp"/>






    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="right|center_vertical"
        android:background="@drawable/grey_rectangle">


        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainColor"
            android:textSize="18dp"
            android:text="@string/payment_when_recieving"
            android:layout_marginRight="10dp"

            />





        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#cccc"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:layout_marginRight="10dp"/>






    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccc"
        android:layout_marginTop="10dp"
        />
    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <tawseel.com.tajertawseel.CustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_request_price"
                android:textSize="18dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <tawseel.com.tajertawseel.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColor"
                    android:text="SR"
                    android:textSize="22dp"/>



                <tawseel.com.tajertawseel.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColor"
                    android:text="820"
                    android:textSize="35dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/abc" />

            </LinearLayout>










        </LinearLayout>





        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">



            <tawseel.com.tajertawseel.CustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price_products"
                android:textSize="14dp"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <tawseel.com.tajertawseel.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColor"
                    android:text="SR"
                    />



                <tawseel.com.tajertawseel.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColor"
                    android:text="800"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cccc"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"/>



            <tawseel.com.tajertawseel.CustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_Price"
                android:textSize="14dp"
                android:layout_marginTop="10dp"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <tawseel.com.tajertawseel.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColor"
                    android:text="SR"
                    />



                <tawseel.com.tajertawseel.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColor"
                    android:text="20"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>



</LinearLayout>