<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white">



    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/dialog_tick_icon"/>


    <tawseel.com.tajertawseel.CustomBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/group_success"
        android:textColor="@color/mainColor"
        android:maxWidth="200dp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    
    
    
    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:background="@drawable/rectangle">
        
        
        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/mainColor"
            android:text="@string/dilevery_begin"
            android:layout_gravity="center_vertical"

            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/confirm12" />



        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/mainColor"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/van_icon"/>





        
        
    </LinearLayout>





    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:background="@drawable/grey_rectangle">


        <tawseel.com.tajertawseel.CustomBoldTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"

            android:textColor="#cccccc"
            android:text="@string/pose"
            android:layout_gravity="center_vertical"

            android:layout_weight="1"
            android:gravity="center"/>











    </LinearLayout>

</LinearLayout>